@@ -4,13 +4,16 @@
 [![Last commit](https://img.shields.io/github/last-commit/winder/Universal-G-Code-Sender.svg?maxAge=1800)](https://github.com/winder/Universal-G-Code-Sender/commits/master)
 [![Build Status](https://img.shields.io/github/actions/workflow/status/winder/Universal-G-code-sender/nightly.yaml?branch=master)](https://github.com/winder/Universal-G-Code-Sender/actions/workflows/nightly.yaml)
 [![Codebeat badge](https://codebeat.co/badges/48cc1265-2f6b-4163-8a8a-964acc073100)](https://codebeat.co/projects/github-com-winder-universal-g-code-sender-master)
+[![Crowdin](https://badges.crowdin.net/universalgcodesender/localized.svg)](https://translate.universalgcodesender.com/project/universalgcodesender)
 [![Downloads](https://img.shields.io/github/downloads/winder/universal-g-code-sender/total?label=downloads)](https://github.com/winder/Universal-G-Code-Sender#downloads)
 [![Releases](https://img.shields.io/github/v/release/winder/Universal-G-Code-Sender)](https://github.com/winder/Universal-G-Code-Sender/releases)
 
 Universal G-Code Sender is a Java based, cross platform G-Code sender, compatible with [GRBL](https://github.com/gnea/grbl/), [TinyG](https://github.com/synthetos/TinyG), [g2core](https://github.com/synthetos/g2) and [Smoothieware](http://smoothieware.org/).
 
-Online documentation and releases: https://winder.github.io/ugs_website/<br/>
-Discussion forum: https://groups.google.com/forum/#!forum/universal-gcode-sender
+Webpage: https://universalgcodesender.com/ <br/>
+Discussion forum: https://github.com/winder/Universal-G-Code-Sender/discussions <br/>
+Discord chat: https://discord.gg/h4HRmyYX <br/>
+Translations: https://poeditor.com/join/project/2J2hB5I41Z <br/>
 
 Technical details:
 
@@ -28,22 +31,23 @@ The next generation, feature packed variant based on the Netbeans Platform.<br>
 Unpack and start the program ```bin/ugsplatform```
 
 
-| Latest release (v2.0.14) | Previous release (v2.0.13) | Nightly build |
-|:-------------------------|:---------------------------|:--------------|
-| [![Windows 32-bit](pictures/os_windows.png) Windows 32-bit](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.0.14/win-ugs-platform-app-2.0.14.zip)    | [![Windows 32-bit](pictures/os_windows.png) Windows 32-bit](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.0.13/win-ugs-platform-app-2.0.13.zip)    | [![Windows 32-bit](pictures/os_windows.png) Windows 32-bit](https://github.com/winder/Universal-G-Code-Sender/releases/download/nightly/win-ugs-platform-app-2.0-SNAPSHOT.zip)  |
-| [![Windows 64-bit](pictures/os_windows.png) Windows 64-bit](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.0.14/win64-ugs-platform-app-2.0.14.zip)  | [![Windows 64-bit](pictures/os_windows.png) Windows 64-bit](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.0.13/win64-ugs-platform-app-2.0.13.zip)  | [![Windows 64-bit](pictures/os_windows.png) Windows 64-bit](https://github.com/winder/Universal-G-Code-Sender/releases/download/nightly/win64-ugs-platform-app-2.0-SNAPSHOT.zip)  |
-| [![Mac OSX](pictures/os_mac.png) Mac OSX](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.0.14/ios-ugs-platform-app-2.0.14.dmg)                      | [![Mac OSX](pictures/os_mac.png) Mac OSX](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.0.13/ios-ugs-platform-app-2.0.13.dmg)                      | [![Mac OSX](pictures/os_mac.png) Mac OSX](https://github.com/winder/Universal-G-Code-Sender/releases/download/nightly/ios-ugs-platform-app-2.0-SNAPSHOT.dmg) |
-| [![Linux x64](pictures/os_linux.png) Linux](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.0.14/linux-ugs-platform-app-2.0.14.tar.gz)               | [![Linux x64](pictures/os_linux.png) Linux](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.0.13/linux-ugs-platform-app-2.0.13.tar.gz)               | [![Linux x64](pictures/os_linux.png) Linux](https://github.com/winder/Universal-G-Code-Sender/releases/download/nightly/linux-ugs-platform-app-2.0-SNAPSHOT.tar.gz) |
-| [![Linux ARM 32-bit](pictures/os_linux_arm.png) RaspberryPI](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.0.14/pi-ugs-platform-app-2.0.14.tar.gz) | [![Linux ARM](pictures/os_linux_arm.png) RaspberryPI](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.0.13/pi-ugs-platform-app-2.0.13.tar.gz)        | [![Linux ARM](pictures/os_linux_arm.png) RaspberryPI](https://github.com/winder/Universal-G-Code-Sender/releases/download/nightly/pi-ugs-platform-app-2.0-SNAPSHOT.tar.gz) |
-| [![Zip](pictures/zip.png) All platforms](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.0.14/ugs-platform-app-2.0.14.zip)                           | [![Zip](pictures/zip.png) All platforms](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.0.13/ugs-platform-app-2.0.13.zip)                           | [![Zip](pictures/zip.png) All platforms](https://github.com/winder/Universal-G-Code-Sender/releases/download/nightly/ugs-platform-app-2.0-SNAPSHOT.zip) |
+| Latest release (v2.1.9)                                                                                                                                                       | Nightly build                                                                                                                                                                         |
+|:------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|:--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| [![Windows 64-bit](pictures/os_windows.png) Windows 64-bit](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.1.9/win64-ugs-platform-app-2.1.9.zip)      | [![Windows 64-bit](pictures/os_windows.png) Windows 64-bit](https://github.com/winder/Universal-G-Code-Sender/releases/download/nightly/win64-ugs-platform-app-2.0-SNAPSHOT.zip)      |
+| [![Mac OSX](pictures/os_mac.png) Mac OSX](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.1.9/macosx-x64-ugs-platform-app-2.1.9.dmg)                   | [![Mac OSX](pictures/os_mac.png) Mac OSX](https://github.com/winder/Universal-G-Code-Sender/releases/download/nightly/macosx-x64-ugs-platform-app-2.0-SNAPSHOT.dmg)                   |
+| [![Mac OSX](pictures/os_mac.png) Mac OSX ARM64](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.1.9/macosx-aarch64-ugs-platform-app-2.1.9.dmg)         | [![Mac OSX ARM64](pictures/os_mac.png) Mac OSX ARM64](https://github.com/winder/Universal-G-Code-Sender/releases/download/nightly/macosx-aarch64-ugs-platform-app-2.0-SNAPSHOT.dmg)   | 
+| [![Linux x64](pictures/os_linux.png) Linux 64-bit](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.1.9/linux-x64-ugs-platform-app-2.1.9.tar.gz)        | [![Linux x64](pictures/os_linux.png) Linux 64-bit](https://github.com/winder/Universal-G-Code-Sender/releases/download/nightly/linux-x64-ugs-platform-app-2.0-SNAPSHOT.tar.gz)        |
+| [![Linux ARM](pictures/os_linux_arm.png) Linux ARM](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.1.9/linux-arm-ugs-platform-app-2.1.9.tar.gz)       | [![Linux ARM](pictures/os_linux_arm.png) Linux ARM](https://github.com/winder/Universal-G-Code-Sender/releases/download/nightly/linux-arm-ugs-platform-app-2.0-SNAPSHOT.tar.gz)       |
+| [![Linux ARM](pictures/os_linux_arm.png) Linux ARM64](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.1.9/linux-aarch64-ugs-platform-app-2.1.9.tar.gz) | [![Linux ARM](pictures/os_linux_arm.png) Linux ARM64](https://github.com/winder/Universal-G-Code-Sender/releases/download/nightly/linux-aarch64-ugs-platform-app-2.0-SNAPSHOT.tar.gz) | 
+| [![Zip](pictures/zip.png) All platforms](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.1.9/ugs-platform-app-2.1.9.zip)                               | [![Zip](pictures/zip.png) All platforms](https://github.com/winder/Universal-G-Code-Sender/releases/download/nightly/ugs-platform-app-2.0-SNAPSHOT.zip)                               |
 
 **UGS Classic**<br>
-A clean and lightweight variant of UGS (requires [Java](https://java.com/en/download/manual.jsp)). <br>
+A clean and lightweight variant of UGS (requires [Java 17](https://adoptium.net/temurin/releases/?package=jre&version=17)). <br>
 Unpack and start the program by double clicking the jar file. On some platforms you may need to run the included start script. <br>
 
-| Latest release (v2.0.14) | Previous release (v2.0.13) | Nightly build  |
-|:---------------|:---------------|:--------------|
-| [![Zip](pictures/zip.png) All platforms](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.0.14/UniversalGcodeSender.zip) | [![Zip](pictures/zip.png) All platforms](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.0.13/UniversalGcodeSender.zip) | [![Zip](pictures/zip.png) All platforms](https://github.com/winder/Universal-G-Code-Sender/releases/download/nightly/UniversalGcodeSender.zip) |
+| Latest release (v2.1.8)                                                                                                                       | Nightly build                                                                                                                                  |
+|:----------------------------------------------------------------------------------------------------------------------------------------------|:-----------------------------------------------------------------------------------------------------------------------------------------------|
+| [![Zip](pictures/zip.png) All platforms](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.1.9/UniversalGcodeSender.zip) | [![Zip](pictures/zip.png) All platforms](https://github.com/winder/Universal-G-Code-Sender/releases/download/nightly/UniversalGcodeSender.zip) |
 
 ## Screenshots
 
@@ -93,7 +97,7 @@ UGS Classic with visualizer
 <details><summary>Show details on how to compile the software</summary>
 <p>
 
-For development we use [Maven](http://maven.apache.org) and [Java](https://github.com/AdoptOpenJDK/openjdk13-binaries/releases/tag/jdk-13.0.1%2B9) for compiling. We rely on a specific version of Java 13.0.1-9 is needed due to compatibility issues with a library we depend on.
+For development we use [Maven](http://maven.apache.org) and [Java 17](https://adoptium.net/) for compiling.
 
 #### Compiling and starting the application
 
@@ -139,7 +143,40 @@ If you are more used to IntelliJ, you can also build, run and debug it there.
 - Import the Source, `File` -> `New` -> `Project from existing Sources`
 - Setup a new "Run Configuration", `Java Application`, with following settings:
   - Main Class: `org.netbeans.Main`
-  - VM Options: `-Dnetbeans.user=$ProjectFileDir$/ugs-platform/application/target/userdir -Dnetbeans.home=$ProjectFileDir$/ugs-platform/application/target/ugsplatform/platform -Dnetbeans.logger.console=true -Dnetbeans.indexing.noFileRefresh=true -Dnetbeans.dirs="$ProjectFileDir$/ugs-platform/application/target/ugsplatform/ugsplatform:$ProjectFileDir$/ugs-platform/application/target/ugsplatform/platform:$ProjectFileDir$/ugs-platform/application/target/ugsplatform/ide:$ProjectFileDir$/ugs-platform/application/target/ugsplatform/extra:$ProjectFileDir$/ugs-platform/application/target/ugsplatform/java"`
+  - VM Options:
+```
+-Dpolyglot.engine.WarnInterpreterOnly=false
+-Dnetbeans.user=$ProjectFileDir$/ugs-platform/application/target/userdir
+-Dnetbeans.home=$ProjectFileDir$/ugs-platform/application/target/ugsplatform/platform
+-Dnetbeans.logger.console=true
+-Dnetbeans.indexing.noFileRefresh=true
+-Dnetbeans.moduleitem.dontverifyclassloader=true
+-Dnetbeans.dirs=$ProjectFileDir$/ugs-platform/application/target/ugsplatform/ugsplatform:$ProjectFileDir$/ugs-platform/application/target/ugsplatform/platform:$ProjectFileDir$/ugs-platform/application/target/ugsplatform/ide:$ProjectFileDir$/ugs-platform/application/target/ugsplatform/extra:$ProjectFileDir$/ugs-platform/application/target/ugsplatform/java
+--add-opens=java.base/java.net=ALL-UNNAMED
+--add-opens=java.base/java.lang.ref=ALL-UNNAMED
+--add-opens=java.base/java.lang=ALL-UNNAMED
+--add-opens=java.base/java.security=ALL-UNNAMED
+--add-opens=java.base/java.util=ALL-UNNAMED
+--add-opens=java.base/java.nio=ALL-UNNAMED
+--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED
+--add-opens=java.prefs/java.util.prefs=ALL-UNNAMED
+--add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED
+--add-opens=java.desktop/javax.swing.text=ALL-UNNAMED
+--add-opens=java.desktop/javax.swing=ALL-UNNAMED
+--add-opens=java.desktop/java.awt=ALL-UNNAMED
+--add-opens=java.desktop/java.awt.event=ALL-UNNAMED
+--add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED
+--add-opens=java.desktop/javax.swing.plaf.synth=ALL-UNNAMED
+--add-opens=java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED
+--add-opens=java.desktop/sun.awt.shell=ALL-UNNAMED
+--add-opens=java.desktop/sun.awt.im=ALL-UNNAMED
+--add-exports=java.desktop/sun.awt=ALL-UNNAMED
+--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED
+--add-exports=java.desktop/com.sun.beans.editors=ALL-UNNAMED
+--add-exports=java.desktop/sun.swing=ALL-UNNAMED
+--add-exports=java.desktop/sun.awt.im=ALL-UNNAMED
+--add-exports=java.desktop/com.sun.java.swing.plaf.motif=ALL-UNNAMED
+``` 
   - Program arguments: `--branding ugsplatform`
   - Working dir: `$ProjectFileDir$`
   - Use classpath of module: `ugs-platform-app` 
