@@ -21,10 +21,11 @@ package com.willwinder.universalgcodesender.connection;
 import com.fazecast.jSerialComm.SerialPort;
 import com.fazecast.jSerialComm.SerialPortDataListener;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.SystemUtils;
 
+import java.io.File;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Serial connection using JSerialComm
@@ -35,12 +36,22 @@ public class JSerialCommConnection extends AbstractConnection implements SerialP
 
     private SerialPort serialPort;
 
+    public JSerialCommConnection() {
+        // Empty implementation
+    }
+
+    public JSerialCommConnection(SerialPort serialPort) {
+        this.serialPort = serialPort;
+    }
+
     @Override
     public void setUri(String uri) {
         try {
             String portName = StringUtils.substringBetween(uri, ConnectionDriver.JSERIALCOMM.getProtocol(), ":");
             int baudRate = Integer.parseInt(StringUtils.substringAfterLast(uri, ":"));
             initSerialPort(portName, baudRate);
+        } catch (ConnectionException e) {
+            throw e;
         } catch (Exception e) {
             throw new ConnectionException("Couldn't parse connection string " + uri, e);
         }
@@ -65,6 +76,8 @@ public class JSerialCommConnection extends AbstractConnection implements SerialP
         }
 
         serialPort = SerialPort.getCommPort(name);
+        checkPermissions();
+
         serialPort.setParity(SerialPort.NO_PARITY);
         serialPort.setNumStopBits(SerialPort.ONE_STOP_BIT);
         serialPort.setNumDataBits(8);
@@ -72,11 +85,23 @@ public class JSerialCommConnection extends AbstractConnection implements SerialP
         serialPort.setBaudRate(baud);
     }
 
+    private void checkPermissions() {
+        if (!SystemUtils.IS_OS_LINUX) {
+            return;
+        }
+
+        File port = new File(serialPort.getSystemPortPath());
+        if (!port.canWrite() || !port.canRead() ) {
+            throw new ConnectionException("Do not have required permissions to open the device on " + serialPort.getSystemPortPath());
+        }
+    }
+
     @Override
     public void closePort() throws Exception {
         if (serialPort != null) {
             serialPort.removeDataListener();
             serialPort.closePort();
+            serialPort = null;
         }
     }
 
@@ -92,36 +117,39 @@ public class JSerialCommConnection extends AbstractConnection implements SerialP
 
     @Override
     public boolean isOpen() {
-        return serialPort.isOpen();
+        return serialPort != null && serialPort.isOpen();
     }
 
     @Override
-    public List<String> getPortNames() {
-        return Arrays.stream(SerialPort.getCommPorts())
-                .map(SerialPort::getSystemPortName)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<IConnectionDevice> getDevices() {
+    public List<? extends IConnectionDevice> getDevices() {
         return Arrays.stream(SerialPort.getCommPorts())
                 .map(JSerialCommConnectionDevice::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public int getListeningEvents() {
-        return SerialPort.LISTENING_EVENT_DATA_AVAILABLE;
+        return SerialPort.LISTENING_EVENT_DATA_AVAILABLE | SerialPort.LISTENING_EVENT_PORT_DISCONNECTED;
     }
 
     @Override
     public void serialEvent(com.fazecast.jSerialComm.SerialPortEvent event) {
-        if (event.getEventType() != SerialPort.LISTENING_EVENT_DATA_AVAILABLE) {
-            return;
+        switch (event.getEventType()) {
+            case SerialPort.LISTENING_EVENT_PORT_DISCONNECTED -> {
+                try {
+                    connectionListenerManager.onConnectionClosed();
+                } catch (Exception e) {
+                    // Never mind
+                }
+            }
+            case SerialPort.LISTENING_EVENT_DATA_AVAILABLE -> {
+                byte[] newData = new byte[serialPort.bytesAvailable()];
+                int numRead = serialPort.readBytes(newData, newData.length);
+                getConnectionListenerManager().handleResponse(newData, 0, numRead);
+            }
+            default -> {
+                // Never mind
+            }
         }
-
-        byte[] newData = new byte[serialPort.bytesAvailable()];
-        int numRead = serialPort.readBytes(newData, newData.length);
-        getResponseMessageHandler().handleResponse(newData, 0, numRead);
     }
 }
