@@ -8,17 +8,16 @@ import com.willwinder.ugs.nbp.designer.io.gcode.path.Segment;
 import com.willwinder.ugs.nbp.designer.io.gcode.path.SegmentType;
 import com.willwinder.ugs.nbp.designer.io.ugsd.UgsDesignReader;
 import com.willwinder.ugs.nbp.designer.model.Design;
+import com.willwinder.ugs.nbp.designer.model.Settings;
 import com.willwinder.ugs.nbp.designer.model.Size;
 import com.willwinder.universalgcodesender.model.Axis;
 import com.willwinder.universalgcodesender.model.PartialPosition;
-import org.junit.Test;
-
-import java.util.List;
-import java.util.stream.Collectors;
-
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
+import org.junit.Test;
+
+import java.util.List;
 
 public class PocketToolPathTest {
 
@@ -33,12 +32,14 @@ public class PocketToolPathTest {
         Rectangle rectangle = new Rectangle();
         rectangle.setSize(new Size(geometrySize, geometrySize));
 
-        PocketToolPath simplePocket = new PocketToolPath(rectangle);
+        Settings settings = new Settings();
+        settings.setSafeHeight(safeHeight);
+        settings.setToolStepOver(1);
+        settings.setToolDiameter(toolRadius * 2);
+        settings.setDepthPerPass(1);
+
+        PocketToolPath simplePocket = new PocketToolPath(settings, rectangle);
         simplePocket.setTargetDepth(targetDepth);
-        simplePocket.setDepthPerPass(depthPerPass);
-        simplePocket.setToolDiameter(toolRadius * 2);
-        simplePocket.setStepOver(1);
-        simplePocket.setSafeHeight(safeHeight);
 
         List<Segment> segmentList = simplePocket.toGcodePath().getSegments();
 
@@ -66,7 +67,7 @@ public class PocketToolPathTest {
 
         List<Segment> drillOperations = segmentList.stream()
                 .filter(segment -> segment.type == SegmentType.POINT)
-                .collect(Collectors.toList());
+                .toList();
         assertEquals("There should be a number of drill operations when making a pocket", Math.abs((targetDepth - depthPerPass) / depthPerPass), drillOperations.size(), 0.1);
 
         PartialPosition point = drillOperations.get(drillOperations.size() - 1).getPoint();
@@ -85,12 +86,15 @@ public class PocketToolPathTest {
         Rectangle rectangle = new Rectangle();
         rectangle.setSize(new Size(geometrySize, geometrySize));
 
-        PocketToolPath simplePocket = new PocketToolPath(rectangle);
+
+        Settings settings = new Settings();
+        settings.setToolDiameter(toolRadius * 2);
+        settings.setSafeHeight(safeHeight);
+        settings.setToolStepOver(1);
+        settings.setDepthPerPass(depthPerPass);
+
+        PocketToolPath simplePocket = new PocketToolPath(settings, rectangle);
         simplePocket.setTargetDepth(targetDepth);
-        simplePocket.setDepthPerPass(depthPerPass);
-        simplePocket.setToolDiameter(toolRadius * 2);
-        simplePocket.setStepOver(1);
-        simplePocket.setSafeHeight(safeHeight);
 
         List<Segment> segmentList = simplePocket.toGcodePath().getSegments();
 
@@ -118,7 +122,7 @@ public class PocketToolPathTest {
 
         List<Segment> drillOperations = segmentList.stream()
                 .filter(segment -> segment.type == SegmentType.POINT)
-                .collect(Collectors.toList());
+                .toList();
         assertEquals("There should be a number of drill operations when making a pocket", Math.abs((targetDepth - depthPerPass) / depthPerPass), drillOperations.size(), 0.1);
 
         PartialPosition point = drillOperations.get(drillOperations.size() - 1).getPoint();
@@ -132,21 +136,23 @@ public class PocketToolPathTest {
 
         double toolDiameter = 1;
         double safeHeight = 5;
-        double startDepth = -1;
-        double targetDepth = -1;
+        double startDepth = 1;
+        double targetDepth = 1;
         int depthPerPass = 1;
 
         double totalLength = 0;
         double totalRapidLength = 0;
 
+        Settings settings = new Settings();
+        settings.setToolStepOver(0.5);
+        settings.setSafeHeight(safeHeight);
+        settings.setToolDiameter(toolDiameter);
+        settings.setDepthPerPass(depthPerPass);
+
         for (Entity entity : design.getEntities()) {
-            PocketToolPath simplePocket = new PocketToolPath((Cuttable) entity);
+            PocketToolPath simplePocket = new PocketToolPath(settings, (Cuttable) entity);
             simplePocket.setTargetDepth(targetDepth);
             simplePocket.setStartDepth(startDepth);
-            simplePocket.setDepthPerPass(depthPerPass);
-            simplePocket.setToolDiameter(toolDiameter);
-            simplePocket.setStepOver(0.5);
-            simplePocket.setSafeHeight(safeHeight);
 
             GcodePath gcodePath = simplePocket.toGcodePath();
             ToolPathStats toolPathStats = ToolPathUtils.getToolPathStats(gcodePath);
